# NetworkAnomalyDetection

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/models/unsupervised_training/: config.json  feature_robust_scaler.pkl  protocol_scalers.pkl  test_anomaly_scores.npy  val_anomaly_scores.npy  y_test.npy  y_val.npy
doc/: project_schedule.md
docs/: ARCHITECTURE.md  DESIGN_PATTERNS.md  ISOLATION_FOREST_IMPROVEMENT_PLAN.md  README_REPORT.md  XGBOOST_OVERFITTING_CHECK.md
notebooks/: 01_EDA_and_Cleaning.ipynb  02_Feature_Engineering_Spark.ipynb  03_Model_Training.ipynb  EDA_and_Feature.ipynb
output/evaluations/: xgb_feature_importance.json
output/report/: report.html
output/unsupervised_model_selection/: comparison_summary.txt  isolation_forest_results.json  lof_results.json  one_class_svm_results.json
scripts/: check_data_quality.py  generate_report.py  load_data_first_time.py  load_raw_data.py  load_raw_data_pyspark.py  postprocess_with_whitelist.py  train_supervised.py  train_unsupervised.py
scripts/evaluation/: check_supervised_overfitting.py  compare_feature_transformations.py
scripts/unsupervised_model_selection/: compare_model_results.py  quick_model_benchmark.py
src/: __init__.py  data_loader.py  evaluator.py  feature_engineer.py  feature_processor.py  feature_selector.py  feature_transformer.py  features.py  label_processor.py  models.py  training_utils.py  whitelist.py
tests/: __init__.py  conftest.py  test_data_loader.py  test_data_quality.py  test_feature_transformer.py  test_label_processor.py
(+2 files in other folders)
